tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__ReactorShielding-AAAAAAAAAAAAAAAAAAAFUA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1360,
  "prerequisites": [
    1359
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Shield Blocks - explosion proof - single use. Get a couple of these to shield your reactor!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Reactor Shielding 2.0",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1359
  ],
  "rewards": [],
  "tasks": []
}
