tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__Repairedit-AAAAAAAAAAAAAAAAAAAFQw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1347,
  "optional_prerequisites": [
    1361,
    1346,
    238
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Sadly enough, the hammer was broken. But you have the skills and the knowledge to repair it, don't you?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Repaired it!",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
