tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__ScrubScrubScrub-bGdFghCeQfuBhAeMWxJJ8A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1197467098747652592,
  "prerequisites": [
    238
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Flux Scrubber is an incredibly useful focus for the messy or insane thaumaturge. It creates a beam that sucks up flux goo and gas.\n\n[note]This focus accepts the following upgrades in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level\n§5Potency§r: Speeds up flux cleanup\n§5Crystallization§r: Drops Crystallized Potentia when cleaning up flux at level 1. Drops Crystallized Essence of a random aspect at level 2. Mutually exclusive with §5Warping§r and §5Calming§r\n§5Warping§r: Gives its user temporary warp when used to clean flux. Mutually exclusive with §5Crystallization§r\n§5Calming§r (level 5, requires §5Warping§r): Negates the effect of §5Warping§r. Removes some temporary or sticky warp when used to clean flux. Mutually exclusive with §5Crystallization§r",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Scrub, Scrub, Scrub...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    238
  ],
  "rewards": [],
  "tasks": []
}
